# transcription-bot

./: .gitignore  README.md  main.py  pyproject.toml
prompts/: transcript.prompt.md
src/: __init__.py  download.py  edit.py  llm.py  main.py  summary.py  transcribe.py
tests/: test.py
