[tool.poetry]
name = "transcribe-bot"
version = "0.1.0"
description = "A bot for transcription tasks."
authors = ["Dante"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
faster-whisper = ">=0.1.0"
ffmpeg = ">=0.100.1"
yt-dlp = ">=2025.12.08"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
